[gd_scene load_steps=6 format=3 uid="uid://7vhkgdhoemv3"]

[ext_resource type="PackedScene" uid="uid://bati8d7pq1ysj" path="res://scenes/sprites/ghost.tscn" id="1_72663"]
[ext_resource type="Script" uid="uid://bfqexwjnmrsef" path="res://scenes/game_scene/game_scene.gd" id="1_xb203"]
[ext_resource type="Texture2D" uid="uid://2stb2d4ddd5w" path="res://assets/images/table_render.png" id="3_xb203"]
[ext_resource type="PackedScene" uid="uid://dr10kbw8kd8o3" path="res://scenes/hud/hud_new.tscn" id="4_xb203"]
[ext_resource type="Script" uid="uid://damck7f6rvxoa" path="res://scenes/game_scene/target_selector.gd" id="5_ducuf"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_xb203")

[node name="Objects" type="Node2D" parent="."]

[node name="Ghost" parent="Objects" instance=ExtResource("1_72663")]
position = Vector2(59, 120)
rotation = 3.14159
scale = Vector2(1, -1)
id = 1

[node name="Button" type="Button" parent="Objects/Ghost"]
top_level = true
offset_left = 43.0
offset_top = 83.0
offset_right = 75.0
offset_bottom = 128.0
disabled = true
flat = true

[node name="Ghost2" parent="Objects" instance=ExtResource("1_72663")]
position = Vector2(163, 109)
id = 2

[node name="Button" type="Button" parent="Objects/Ghost2"]
top_level = true
offset_left = 147.0
offset_top = 74.0
offset_right = 179.0
offset_bottom = 119.0
disabled = true
flat = true

[node name="Ghost3" parent="Objects" instance=ExtResource("1_72663")]
position = Vector2(264, 121)
id = 3

[node name="Button" type="Button" parent="Objects/Ghost3"]
top_level = true
offset_left = 247.0
offset_top = 86.0
offset_right = 279.0
offset_bottom = 131.0
disabled = true
flat = true

[node name="Table" type="Sprite2D" parent="Objects"]
texture = ExtResource("3_xb203")
centered = false

[node name="HUD" parent="." instance=ExtResource("4_xb203")]

[node name="TargetSelector" type="Node" parent="." groups=["Selector"]]
script = ExtResource("5_ducuf")
